fix(YQLTable): fix appearance of truncated value in cell

--- a/packages/ui/src/ui/pages/query-tracker/QueryResultsView/YQLTable/YQLTable.scss
+++ b/packages/ui/src/ui/pages/query-tracker/QueryResultsView/YQLTable/YQLTable.scss
@@ -20,14 +20,6 @@
 
         max-width: var(--qt-result-table-cell-max-width);
 
-        & .incomplete {
-            background-color: initial;
-
-            &::after {
-                content: none;
-            }
-        }
-
         video {
             max-width: var(--qt-result-table-cell-max-width);
         }
